assets/stylesheets/universalcredit.scss
/*
  //=require_directory .
  //=require_tree ../../widgets
*/

body {
  margin: 0;
  font-size: 20px;
  font-family: Helvetica, Arial, sans-serif;
}
@media (max-width: 767px) { body { font-size: 15px;} }

a, a:visited, a:hover {
  color:#005F9E;
  font-weight:bold;
}

#home {
  text-align: center;
  padding:50px;
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    li {
      margin-bottom:0.5em;
    }
  }
}

.footer {
  position:fixed;
  bottom:0;
  right:0;
  left:0;
  z-index:100;
  padding:10px 10px 5px 10px;
  background:#fff;
  height:35px;
  h3{
    text-transform:uppercase;
    color:#005F9E;
    margin:0;
    font-size:38px;
  }
  #logos {
    position:absolute;
    right:3px;
    top:5px;
    margin:0;
    padding-left:0;
    li {
      display:inline;
      list-style-type: none;
      padding:0;
      margin:0;
      img {
        height:40px;
      }
    }
  }

}

@media (max-width: 767px) { .footer { h3 { font-size: 20px; } } }


.gridster {
  margin: 0px auto;
  background:#fff;
}

.list-nostyle {
  list-style: none;
}

.gridster ul {
  list-style: none;
}

.gs_w {
  width: 100%;
  display: table;
  cursor: pointer;
}

.widget {
  padding: 0 12px;
  width: 100%;
  vertical-align: middle;
  .title {
    text-transform: uppercase;
    font-size:20px;
    margin:0;
  }
}

@media (max-width: 767px) { .widget { .title { font-size: 15px; } } }

.more-info {
  font-size: 15px;
  position: absolute;
  bottom: 32px;
  left: 0;
  right: 0;
}

@media (max-width: 767px) { .more-info { font-size: 12px; } }

.updated-at {
  font-size: 15px;
  position: absolute;
  left: 12px;
  right: 0;
  color: rgba(255, 255, 255, 0.7);
  display:none;
}

@media (max-width: 767px) { .updated-at { font-size: 10px; } }


.widget-jobs .scrolling-item {
  max-height: 130px;
  transition-property: all;
  transition-duration: 4s;
  -webkit-transition-property: all;
  -webkit-transition-duration: 4s;
  overflow-y: hidden;
}

.widget-scrollinglist .scrolling-item {
  max-height: 250px;
  transition-property: all;
  transition-duration: 2s;
  -webkit-transition-property: all;
  -webkit-transition-duration: 2s;
  overflow-y: hidden;
}

.scrolling-item.closed {
  max-height: 0;
}

.widget-scrollinglist {
  font-size:25px;
  font-weight:bold;
}

@media (max-width: 767px) {
  .widget-scrollinglist {
    font-size: 20px;
  }
}


.gridster {
  li[data-row="1"] {
    background:#2e8aca;
    color:#fff;
    padding-bottom:5px;
    .title {
      margin:15px 0;
    }
  }
  li[data-row="3"] {
    padding-top:40px;
  }
}

.hidden-overflow {
  overflow: hidden;
}

